--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,20 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_transform">Transform</string>
+    <string name="menu_search">Búsqueda</string>
     <string name="menu_reflow">Reflow</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_weather_detail">Detalle del Clima</string>
+    
+    <!-- Search Screen -->
+    <string name="search_hint">Buscar en Weather Bold</string>
+    <string name="no_results_found">No se encontraron resultados</string>
+    <string name="try_different_search">Intenta con otra búsqueda</string>
+    <string name="network_error">Sin conexión a internet</string>
+    <string name="search_error">Error al buscar ubicaciones</string>
+    <string name="location_icon_description">Icono de ubicación</string>
+    <string name="country_flag_description">Bandera del país</string>
 
     <string name="lorem_ipsum_title">Lorem Ipsum"</string>
     <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
