--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,35 +1,26 @@
 <resources>
     <string name="app_name">WeatherBold</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-
+    
+    <!-- Menu -->
     <string name="menu_search">Búsqueda</string>
-    <string name="menu_reflow">Reflow</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_settings">Configuración</string>
     <string name="menu_weather_detail">Detalle del Clima</string>
     
     <!-- Search Screen -->
-    <string name="search_hint">Buscar en Weather Bold</string>
+    <string name="search_hint">Buscar ubicación</string>
     <string name="no_results_found">No se encontraron resultados</string>
     <string name="try_different_search">Intenta con otra búsqueda</string>
     <string name="network_error">Sin conexión a internet</string>
     <string name="search_error">Error al buscar ubicaciones</string>
+    
+    <!-- Weather Detail Screen -->
+    <string name="three_day_forecast">Pronóstico de 3 días</string>
+    <string name="weather_icon">Icono del clima</string>
+    <string name="retry">Reintentar</string>
+    <string name="loading">Cargando…</string>
+    <string name="error_loading_weather">Error al cargar el clima</string>
+    
+    <!-- Content Descriptions -->
     <string name="location_icon_description">Icono de ubicación</string>
     <string name="country_flag_description">Bandera del país</string>
-
-    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
-    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
-        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
-        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-        type specimen book"
-    </string>
-    <string name="fab_content_description">Represents a view to invoke an action</string>
-    <string name="image_view_item_transform_content_description">Represents an image view in the
-        item
-    </string>
 </resources>
