--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,47 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">WeatherBold</string>
+    <!-- App Name -->
+    <string name="app_name">Weather Bold</string>
     
     <!-- Menu -->
-    <string name="menu_search">Búsqueda</string>
-    <string name="menu_settings">Configuración</string>
-    <string name="menu_weather_detail">Detalle del Clima</string>
+    <string name="menu_search">Search</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_weather_detail">Weather Detail</string>
     
     <!-- Search Screen -->
-    <string name="search_hint">Buscar ubicación</string>
-    <string name="no_results_found">No se encontraron resultados</string>
-    <string name="try_different_search">Intenta con otra búsqueda</string>
-    <string name="network_error">Sin conexión a internet</string>
-    <string name="search_error">Error al buscar ubicaciones</string>
+    <string name="search_hint">Search location</string>
+    <string name="no_results_found">No results found</string>
+    <string name="try_different_search">Try a different search</string>
+    <string name="network_error">No internet connection</string>
+    <string name="search_error">Error searching locations</string>
     
     <!-- Weather Detail Screen -->
-    <string name="three_day_forecast">Pronóstico de 3 días</string>
-    <string name="weather_icon">Icono del clima</string>
-    <string name="retry">Reintentar</string>
-    <string name="loading">Cargando…</string>
-    <string name="error_loading_weather">Error al cargar el clima</string>
+    <string name="three_day_forecast">3-Day Forecast</string>
+    <string name="weather_icon">Weather icon</string>
+    <string name="retry">Retry</string>
+    <string name="loading">Loading…</string>
+    <string name="error_loading_weather">Error loading weather</string>
+    
+    <!-- Weather Formatting -->
+    <string name="format_temperature">%d°C</string>
+    <string name="format_feels_like">Feels like: %d°C</string>
+    <string name="format_wind" formatted="false">%d km/h %s</string>
+    <string name="format_humidity">%d%%</string>
+    <string name="format_visibility">%d km</string>
+    
+    <!-- Day Names -->
+    <string name="day_today">Today</string>
+    <string name="day_tomorrow">Tomorrow</string>
+    <string name="day_after_tomorrow">Day After Tomorrow</string>
     
     <!-- Content Descriptions -->
-    <string name="location_icon_description">Icono de ubicación</string>
-    <string name="country_flag_description">Bandera del país</string>
+    <string name="location_icon_description">Location icon</string>
+    <string name="search_icon_description">Search icon</string>
+    <string name="clear_search_description">Clear search</string>
+    
+    <!-- Error Messages -->
+    <string name="error_generic">Something went wrong</string>
+    <string name="error_no_internet">Please check your internet connection</string>
+    <string name="error_location_not_found">Location not found</string>
+    <string name="error_api_error">Service temporarily unavailable</string>
 </resources>
