refactor(ui): Improve weather string formatting and unify search bar styling
This commit refines the display text for weather details to be more consistent and user-friendly. It also simplifies the search bar's styling by removing redundant XML attributes.

### Key Changes:

-   **Consistent Weather Formatting:**
    -   Prefixed the wind, humidity, and visibility strings with labels (e.g., "Wind:", "Humedad:") in both English (`strings.xml`) and Spanish (`values-es/strings.xml`).
    -   Shortened the Spanish "feels like" text from "Sensación térmica" to "Sensación" for better conciseness.

-   **Simplified Search Bar Styling:**
    -   Removed several hardcoded color attributes (`boxStrokeColor`, `hintTextColor`, `endIconTint`) from the `TextInputLayout` in `fragment_search.xml`. The styling is now managed centrally through the app's theme.
    -   Updated `search_bar_stroke.xml` to use `@color/gradient_end` for the focused state, creating a stronger visual indicator.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -24,10 +24,10 @@
     
     <!-- Formato del Clima -->
     <string name="format_temperature">%d°C</string>
-    <string name="format_feels_like">Sensación térmica: %d°C</string>
-    <string name="format_wind" formatted="false">%d km/h %s</string>
-    <string name="format_humidity">%d%%</string>
-    <string name="format_visibility">%d km</string>
+    <string name="format_feels_like">Sensación: %d°C</string>
+    <string name="format_wind" formatted="false">Viento: %d km/h %s</string>
+    <string name="format_humidity">Humedad: %d%%</string>
+    <string name="format_visibility">Visibilidad: %d km</string>
     
     <!-- Nombres de Días -->
     <string name="day_today">Hoy</string>
